# install-x

./: .gitignore  PRD.md  README.md  pyproject.toml
src/install_x/: mcp_server.py
src/install_x/install/: 3DTopia-XL.sh  4dgen.sh  Amodal3R.sh  Any6D.sh  CraftsMan3D.sh  DCNv4.sh  DeepCode.sh  Depth-Anything-V2.sh  Dora.sh  Hunyuan3D-2.1.sh  InstantMesh.sh  Isaac-GR00T.sh  LGM.sh  MinkowskiEngine.sh  OnePoseviaGen.sh  Orient-Anything.sh  Qwen2.5-VL.sh  RoboTwin.sh  SAM-6D.sh  SpaTrackerV2.sh  Stable3DGen.sh  StableNormal.sh  Step1X-3D.sh  TRELLIS.sh  TripoSF.sh  TripoSG.sh  TripoSR.sh  VibeVoice.sh  Video-Depth-Anything.sh  Wonder3D++.sh  ZS6D.sh  _template.sh  base.sh  blender.sh  cnos.sh  co-tracker.sh  curobo.sh  dust3r.sh  executorch.sh  finegrasp_graspnet1b.sh  (+18 more)
src/install_x/install/patch/: MinkowskiEngine.patch  Orient-Anything.patch  SAM-6D.patch  Scale-Balanced-Grasp.patch  Step1X-3D.patch  Video-Depth-Anything.patch  foundpose.patch  lang-segment-anything_e9af744d.patch  mmcv_v1.5.0.patch  spconv.patch  vggt.patch
tests/: test_mcp_server.py
