[project]
name = "install-x"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bingwen.ai", email = "bingwen.ai@bytedance.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/install_x"]
